# kennel

./: .coverage.claudecode.pid1028.XyLG37Yx.H2TES1vO5ANh  .coverage.claudecode.pid1034.XPTceVkx.HaYCfJelKHZh  .coverage.claudecode.pid1037.XIGYauAx.HtKUYdPRfWwh  .dockerignore  .gitignore  .lsp.json  CLAUDE.md  Makefile  README.md  build  chat.sh  docker-bake.hcl  dune-workspace  fido  package-lock.json  package.json  pyproject  pyproject.build.toml  pyproject.project.toml  pyproject.ruff.toml  pyproject.toml  pyproject.tools.toml  pyrightconfig.json  start.sh  sync-tasks.sh  task-cli.sh  watchdog.sh  work.sh
.claude/skills/guarddog/: SKILL.md
.githooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  generate_ci.py  pages.yml  rocq-python-extraction-image.yml  rocq-python-extraction.yml
docs/: CLAUDE.md  CNAME  _config.yml  about.md  codex-live-smoke.md  codex-provider.md  index.md
docs/_data/stats/: 2026-04-05.yml  2026-04-06.yml  2026-04-07.yml  2026-04-08.yml  2026-04-09.yml  2026-04-10.yml  2026-04-11.yml  2026-04-12.yml  2026-04-15.yml  2026-04-16.yml  2026-04-17.yml  2026-04-18.yml  2026-04-20.yml  2026-04-21.yml  2026-04-23.yml  2026-04-24.yml  2026-04-25.yml  (+1 more)
docs/_includes/: daily-stats-post.html
docs/_layouts/: home.html  post.html
docs/_posts/: 2026-04-05-journal.md  2026-04-06-journal.md  2026-04-07-journal.md  2026-04-08-journal.md  2026-04-09-journal.md  2026-04-10-journal.md  2026-04-10-weekly-reflection.md  2026-04-11-journal.md  2026-04-12-journal.md  2026-04-12-weekly-reflection.md  2026-04-13-journal.md  2026-04-14-journal.md  2026-04-15-journal.md  2026-04-16-journal.md  2026-04-17-journal.md  2026-04-18-journal.md  2026-04-19-journal.md  2026-04-20-journal.md  2026-04-21-journal.md  2026-04-22-journal.md  2026-04-23-journal.md  2026-04-24-journal.md  2026-04-25-journal.md  2026-04-26-weekly-reflection.md
docs/assets/: main.scss
docs/scripts/: generate-stats.sh
kennel/: __main__.py  acp.py  cache_webhooks.py  chat.py  claimed.py  claude.py  cli.py  color.py  config.py  copilotcli.py  events.py  fido_help.py  gemini.py  gh_status.py  github.py  hooks.py  infra.py  issue_cache.py  main.py  prompts.py  provider.py  provider_factory.py  rate_limit.py  registry.py  reply_promises.py  rocq_traceback.py  server.py  session_agent.py  state.py  static_files.py  status.py  sync_tasks_cli.py  tasks.py  tests_main.py  types.py  watchdog.py  worker.py
kennel/models_generated/: __init__.py  bool_not.py  transition.py
kennel/static/: status.css  status.xsl
models/: BUG_MINED_INVARIANTS.md  Dockerfile  build.sh  ci_task_lifecycle.v  claude_session.v  commit_result.v  concurrency_primitives.v  coord_index.v  dune  dune-project  handler_preemption.v  harness_commit_decision.v  nudge_kind.v  payload_text.v  pr_body_task_store.v  preamble.v  replied_comment_claims.v  reply_outbox_protocol.v  retry_budget.v  seed.v  self_restart.v  session_lock.v  session_lock_io.v  session_ownership_fifo.v  task_queue_rescope.v  thread_auto_resolve.v  turn_outcome.v  watchdog_transitions.v  webhook_command_translation.v  webhook_ingress_dedupe.v  worker_claude_lifecycle.v  worker_registry_crash.v
perf/build-graph/: measurements.json
rocq-python-extraction/: CLAUDE.md  DEDUPLICATION.md  DESIGN.md  DIAGNOSTICS.md  Dockerfile  META.rocq-python-extraction.template  Makefile  dune  dune-project  export_generated_python.sh  g_python_extraction.mlg  python.ml  rocq-python-extraction.opam  run_generated_pyright.sh  run_in_docker.sh
rocq-python-extraction/test/: acceptance.v  check_bintree_is_leaf.py  check_bool_not.py  check_color_is_red.py  check_even_depth.py  check_expr_is_num_pair.py  check_has_left3.py  check_is_even.py  check_list_add_one.py  check_mforest_is_empty.py  check_mylist_is_empty.py  check_myopt_flatten.py  check_nat_double.py  check_ntree_is_leaf.py  check_option_inc.py  check_pair_swap.py  check_phase2_syntax.py  check_phase9.py  check_point5.py  check_poly_id.py  check_proj_pair_r.py  check_roseforest_is_empty.py  check_stree_size.py  check_wf_countdown.py  coinductives.v  concurrency_interleave_unsupported.v  concurrency_primitives.v  conftest.py  core_terms.v  datatypes.v  dune  finite_collections.v  generated_pyright_targets.txt  generated_pytest_targets.txt  io_boundaries.v  io_run_unsupported.v  modules.v  monads.v  nested_patterns.v  numbers.v  (+63 more)
site/_posts/: 2026-04-05-journal.md
src/fido/: __main__.py  appstate.py  atomic.py  cache_webhooks.py  chat.py  claimed.py  claude.py  cli.py  codex.py  color.py  comment_cache.py  config.py  copilotcli.py  events.py  fido_help.py  gh_status.py  github.py  harness_commit.py  hooks.py  idle_timeout.py  infra.py  issue_cache.py  lens.py  main.py  nudges.py  prompts.py  provider.py  provider_factory.py  provider_pressure.py  rate_limit.py  registry.py  reply_promises.py  reply_store.py  repo.py  rocq_generated_pyright.py  rocq_lsp.py  rocq_pymap.py  rocq_repl.py  rocq_runtime.py  rocq_traceback.py  (+19 more)
sub/: ci.md  comments.md  life.md  merge.md  persona.md  setup.md  task.md
tests/: conftest.py  fakes.py  test___main__.py  test_acp.py  test_appstate.py  test_atomic.py  test_build_wrapper.py  test_cache_webhooks.py  test_chat.py  test_check_no_magicmock.py  test_ci_task_lifecycle.py  test_claude.py  test_claude_hold_for_handler.py  test_claude_preempt_kind.py  test_claude_stream_fsm_oracle.py  test_cli.py  test_codex.py  test_color.py  test_comment_cache.py  test_compose_pyproject.py  test_config.py  test_copilot_hold_for_handler.py  test_copilotcli.py  test_coverage_fills.py  test_events.py  test_extraction_diagnostics_catalogue.py  test_fido_help.py  test_gemini.py  test_gh_status.py  test_github.py  test_handler_preemption_oracle.py  test_harness_commit.py  test_hooks.py  test_infra.py  test_issue_cache.py  test_lens.py  test_live_provider_stats.py  test_main.py  test_nudges.py  test_pr_body_task_store_oracle.py  (+45 more)
tools/: build_graph.sh  check_no_magicmock.py  codex_appserver_smoke.py  compose_pyproject.py  gen_workflows.py  measure_build_graph.py  rocq_model_outputs.sh
(+73 files in other folders)
