[project]
name = "kennel"
version = "0.1.0"
description = "GitHub webhook listener for Fido"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "requests",
]

[dependency-groups]
dev = ["pyright", "ruff", "pytest", "pytest-cov", "pytest-xdist", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kennel = "kennel.main:main"
tests = "kennel.tests_main:main"
traceback = "kennel.rocq_traceback:main"

[tool.ruff]
target-version = "py314"
# Generated Python from Rocq extraction — formatted by build.sh, not by the
# pre-commit hook.  ruff format is applied during generation; lint is skipped
# because generated code has unused imports that are valid for richer models.
exclude = ["kennel/models_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "rocq-python-extraction/test"]
addopts = "-n auto"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["kennel", "rocq-python-extraction/test"]
# Exclude generated Rocq extraction output — tested indirectly via the
# Docker-backed CI build, not by the Python test suite.
omit = [
    "kennel/models_generated/*",
    "rocq-python-extraction/test/conftest.py",
    "rocq-python-extraction/test/pyright_*.py",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
fail_under = 100
