[project]
name = "fido"
version = "0.1.0"
description = "GitHub webhook listener for Fido"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "requests",
]

[dependency-groups]
dev = ["pyright[nodejs]", "ruff", "pytest", "pytest-cov", "pytest-xdist", "hypothesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fido = "fido.main:main"
fido-help = "fido.fido_help:main"
fido-chat = "fido.chat:main"
fido-gh-status = "fido.gh_status:main"
fido-status = "fido.status:main"
fido-sync-tasks = "fido.sync_tasks_cli:main"
fido-task = "fido.cli:main"
tests = "fido.tests_main:main"
traceback = "fido.rocq_traceback:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fido"]

[tool.ruff]
target-version = "py314"
# Generated Python from Rocq extraction — formatted by ./fido make-rocq, not by the
# pre-commit hook.  ruff format is applied during generation; lint is skipped
# because generated code has unused imports that are valid for richer models.
exclude = ["src/fido/rocq"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "rocq-python-extraction/test"]
addopts = "-n auto"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["fido", "rocq-python-extraction/test"]
# Exclude generated Rocq extraction output — tested indirectly via the
# Docker-backed CI build, not by the Python test suite.
omit = [
    "src/fido/rocq/*",
    "rocq-python-extraction/test/conftest.py",
    "rocq-python-extraction/test/pyright_*.py",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
fail_under = 100
