(rocq.theory
 (name FidoModels)
 (synopsis "Fido coordination models — extracted to src/fido/rocq/")
 (plugins rocq-python-extraction)
 (theories Stdlib)
 (modules
  preamble
  seed
  session_lock
  payload_text
  retry_budget
  coord_index
  concurrency_primitives
  replied_comment_claims
  task_queue_rescope
  session_ownership_fifo
  worker_claude_lifecycle
  webhook_command_translation
  claude_session
  watchdog_transitions
  worker_registry_crash
  self_restart))
