(rocq.theory
 (name FidoModels)
 (synopsis "Fido coordination models — extracted to src/fido/rocq/")
 (plugins rocq-python-extraction)
 (theories Stdlib)
 (modules
  preamble
  seed
  session_lock
  payload_text
  retry_budget
  coord_index
  concurrency_primitives
  replied_comment_claims
  reply_outbox_protocol
  task_queue_rescope
  ci_task_lifecycle
  thread_auto_resolve
  pr_body_task_store
  session_ownership_fifo
  worker_claude_lifecycle
  webhook_command_translation
  claude_session
  watchdog_transitions
  worker_registry_crash
  webhook_ingress_dedupe
  self_restart
  handler_preemption
  turn_outcome
  commit_result
  harness_commit_decision
  nudge_kind))
