(library
 (name rocq_python_extraction_plugin)
 (public_name rocq-python-extraction)
 (synopsis "Rocq → Python extraction plugin")
 (flags :standard -rectypes -open Extraction_plugin)
 (libraries
  rocq-runtime.plugins.extraction
  rocq-runtime.interp
  rocq-runtime.vernac))

(rule
 (targets g_python_extraction.ml)
 (deps    (:mlg g_python_extraction.mlg))
 (action  (chdir %{project_root} (run rocq pp-mlg %{deps}))))

; Validate that every .py produced by phase2.v is syntactically valid Python.
; These files are written as side-effects of the rocq.theory build and land in
; the project's build root (_build/default/).  The theory .vo is listed as a
; dep so dune builds it first; the .py files exist in the same build pass
; before dune's next-invocation cleanup removes undeclared artifacts.
(rule
 (alias runtest)
 (deps test/phase2.vo)
 (action
  (bash "\
for f in nat_add.py mk_pair_r.py zeros.py uint_val.py float_val.py str_val.py todo_val.py; do \
  python3 -m py_compile \"$f\" || exit 1; \
done && echo 'All extracted .py files are syntactically valid Python.'"
  )))

; Phase 3 round-trip tests: extracted(f(x)) == expected(x) for each primitive.
; Each rule depends on the phase3.vo build which produces the .py side-effects.

; bool → Python bool: bool_not(True) is False and bool_not(False) is True.
(rule
 (alias runtest)
 (deps test/phase3.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('bool_not.py').read()); \
assert bool_not(True) is False, 'bool_not(True): got ' + repr(bool_not(True)); \
assert bool_not(False) is True, 'bool_not(False): got ' + repr(bool_not(False)); \
print('Phase 3 bool round-trip: OK')\
\""
  )))

; nat → Python int: nat_double(k) == 2*k for k in {0, 3, 5}.
(rule
 (alias runtest)
 (deps test/phase3.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('nat_double.py').read()); \
assert nat_double(0) == 0, 'nat_double(0): got ' + repr(nat_double(0)); \
assert nat_double(3) == 6, 'nat_double(3): got ' + repr(nat_double(3)); \
assert nat_double(5) == 10, 'nat_double(5): got ' + repr(nat_double(5)); \
print('Phase 3 nat round-trip: OK')\
\""
  )))

; option → Python Optional: option_inc propagates None and increments Some values.
(rule
 (alias runtest)
 (deps test/phase3.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('option_inc.py').read()); \
assert option_inc(None) is None, 'option_inc(None): got ' + repr(option_inc(None)); \
assert option_inc(0) == 1, 'option_inc(0): got ' + repr(option_inc(0)); \
assert option_inc(5) == 6, 'option_inc(5): got ' + repr(option_inc(5)); \
print('Phase 3 option round-trip: OK')\
\""
  )))

; prod → Python tuple: pair_swap swaps the two components of an int 2-tuple.
(rule
 (alias runtest)
 (deps test/phase3.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('pair_swap.py').read()); \
assert pair_swap((0, 1)) == (1, 0), 'pair_swap((0, 1)): got ' + repr(pair_swap((0, 1))); \
assert pair_swap((3, 7)) == (7, 3), 'pair_swap((3, 7)): got ' + repr(pair_swap((3, 7))); \
assert pair_swap((5, 5)) == (5, 5), 'pair_swap((5, 5)): got ' + repr(pair_swap((5, 5))); \
print('Phase 3 prod round-trip: OK')\
\""
  )))

; list → Python list: list_add_one increments every element by one.
(rule
 (alias runtest)
 (deps test/phase3.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('list_add_one.py').read()); \
assert list_add_one([]) == [], 'list_add_one([]): got ' + repr(list_add_one([])); \
assert list_add_one([0, 1, 2]) == [1, 2, 3], 'list_add_one([0,1,2]): got ' + repr(list_add_one([0, 1, 2])); \
assert list_add_one([5]) == [6], 'list_add_one([5]): got ' + repr(list_add_one([5])); \
print('Phase 3 list round-trip: OK')\
\""
  )))

; ---------------------------------------------------------------------------
; Phase 4 round-trip tests: inductive datatype emission.
; Each rule depends on test/phase4.vo which produces the .py side-effects.
; The Python scripts use exec() to load the generated file, then assert that
; functions built on non-remapped dataclass hierarchies behave correctly.
; ---------------------------------------------------------------------------

; MyList A: mylist_is_empty returns True for MNil and False for MCons.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('mylist_is_empty.py').read()); \
assert mylist_is_empty(MNil()) is True,  'mylist_is_empty(MNil()): got '  + repr(mylist_is_empty(MNil())); \
assert mylist_is_empty(MCons(1, MNil())) is False, 'mylist_is_empty(MCons(...)): got ' + repr(mylist_is_empty(MCons(1, MNil()))); \
print('Phase 4 MyList round-trip: OK')\
\""
  )))

; BinTree: bintree_is_leaf returns True for BLeaf and False for BNode.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('bintree_is_leaf.py').read()); \
assert bintree_is_leaf(BLeaf()) is True,  'bintree_is_leaf(BLeaf()): got ' + repr(bintree_is_leaf(BLeaf())); \
assert bintree_is_leaf(BNode(BLeaf(), 42, BLeaf())) is False, 'bintree_is_leaf(BNode(...)): got ' + repr(bintree_is_leaf(BNode(BLeaf(), 42, BLeaf()))); \
print('Phase 4 BinTree round-trip: OK')\
\""
  )))

; RoseTree/RoseForest (mutual, parameterised): roseforest_is_empty.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('roseforest_is_empty.py').read()); \
assert roseforest_is_empty(RFNil()) is True,  'roseforest_is_empty(RFNil()): got ' + repr(roseforest_is_empty(RFNil())); \
assert roseforest_is_empty(RFCons(RNode(1, RFNil()), RFNil())) is False, 'roseforest_is_empty(RFCons(...)): got ' + repr(roseforest_is_empty(RFCons(RNode(1, RFNil()), RFNil()))); \
print('Phase 4 RoseForest round-trip: OK')\
\""
  )))

; MTree/MForest (mutual, non-parameterised): mforest_is_empty.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('mforest_is_empty.py').read()); \
assert mforest_is_empty(FNil()) is True,  'mforest_is_empty(FNil()): got ' + repr(mforest_is_empty(FNil())); \
assert mforest_is_empty(FCons(MLeaf(1), FNil())) is False, 'mforest_is_empty(FCons(...)): got ' + repr(mforest_is_empty(FCons(MLeaf(1), FNil()))); \
print('Phase 4 MForest round-trip: OK')\
\""
  )))

; MyOpt A: myopt_flatten collapses one layer of nesting.
; Also exercises zero-arg dataclass construction (MyNone() not just MyNone).
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('myopt_flatten.py').read()); \
r1 = myopt_flatten(MyNone()); \
assert isinstance(r1, MyNone), 'myopt_flatten(MyNone()): got ' + repr(r1); \
r2 = myopt_flatten(MySome(MyNone())); \
assert isinstance(r2, MyNone), 'myopt_flatten(MySome(MyNone())): got ' + repr(r2); \
r3 = myopt_flatten(MySome(MySome(42))); \
assert isinstance(r3, MySome) and r3.arg0 == 42, 'myopt_flatten(MySome(MySome(42))): got ' + repr(r3); \
print('Phase 4 MyOpt round-trip: OK')\
\""
  )))

; Even/Odd (mutual, non-parameterised): even_depth measures alternating parity depth.
; Exercises: (a) a mutual inductive group with cross-referencing constructors, and
; (b) a mutually-recursive fixpoint (Dfix) that pattern-matches both packets.
; The ../ prefix is needed because dune action CWD is _build/default/rocq-python-extraction/
; while the extraction side-effects land in _build/default/.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('../even_depth.py').read()); \
assert even_depth(EvenO()) == 0, 'even_depth(EvenO()): got ' + repr(even_depth(EvenO())); \
assert even_depth(EvenS(OddS(EvenO()))) == 2, 'even_depth depth-2: got ' + repr(even_depth(EvenS(OddS(EvenO())))); \
assert even_depth(EvenS(OddS(EvenS(OddS(EvenO()))))) == 4, 'even_depth depth-4: got ' + repr(even_depth(EvenS(OddS(EvenS(OddS(EvenO())))))); \
assert isinstance(EvenO(), Even), 'EvenO() must be instance of Even'; \
assert isinstance(OddS(EvenO()), Odd), 'OddS() must be instance of Odd'; \
print('Phase 4 Even/Odd round-trip: OK')\
\""
  )))

; is_even / is_odd (mutual fixpoint over remapped nat): boolean parity check.
; Exercises a Dfix mutual fixpoint whose input (nat → int) and output
; (bool → Python bool) are both remapped primitives — no user-defined
; dataclass involved at all.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('../is_even.py').read()); \
assert is_even(0) is True,  'is_even(0): got '  + repr(is_even(0)); \
assert is_even(1) is False, 'is_even(1): got '  + repr(is_even(1)); \
assert is_even(2) is True,  'is_even(2): got '  + repr(is_even(2)); \
assert is_even(3) is False, 'is_even(3): got '  + repr(is_even(3)); \
assert is_even(4) is True,  'is_even(4): got '  + repr(is_even(4)); \
print('Phase 4 is_even round-trip: OK')\
\""
  )))

; NTree (nested inductive): NNode carries a native Python list of NTree children.
; Exercises: (a) a constructor field typed list[NTree] (remapped container +
; non-remapped element), (b) pattern matching returning a remapped bool.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('../ntree_is_leaf.py').read()); \
assert ntree_is_leaf(NLeaf()) is True,  'ntree_is_leaf(NLeaf()): got '  + repr(ntree_is_leaf(NLeaf())); \
assert ntree_is_leaf(NNode([])) is False, 'ntree_is_leaf(NNode([])): got ' + repr(ntree_is_leaf(NNode([]))); \
assert ntree_is_leaf(NNode([NLeaf()])) is False, 'ntree_is_leaf(NNode([NLeaf()])): got ' + repr(ntree_is_leaf(NNode([NLeaf()]))); \
assert isinstance(NLeaf(), NTree), 'NLeaf() must be instance of NTree'; \
assert isinstance(NNode([]), NTree), 'NNode([]) must be instance of NTree'; \
print('Phase 4 NTree nested inductive round-trip: OK')\
\""
  )))

; color: lowercase Rocq inductive → capitalized Python base class.
; Verifies that the extraction plugin capitalizes the base class name
; (color → Color) per PEP 8.  The isinstance check confirms the name
; is correct in the emitted class hierarchy, not just in a comment.
(rule
 (alias runtest)
 (deps test/phase4.vo)
 (action
  (bash "\
python3 -c \"\
exec(open('color_is_red.py').read()); \
assert color_is_red(Red()) is True,    'color_is_red(Red()): got '   + repr(color_is_red(Red())); \
assert color_is_red(Green()) is False, 'color_is_red(Green()): got ' + repr(color_is_red(Green())); \
assert color_is_red(Blue()) is False,  'color_is_red(Blue()): got '  + repr(color_is_red(Blue())); \
assert isinstance(Red(), Color), 'Red() must be instance of Color (capitalized base class)'; \
print('Phase 4 color capitalization: OK')\
\""
  )))
