(rocq.theory
 (name PyExtractTest)
 (synopsis "Python extraction acceptance tests — core terms, primitive remapping, datatypes, nested patterns, records, Acc-erasure, polymorphism, coinductives, modules, strings/bytes, numbers, finite collections, and IO boundaries")
 (plugins rocq-python-extraction)
 (theories Stdlib)
 (modules
  acceptance
  python
  core_terms
  primitives
  datatypes
  nested_patterns
  records
  wf_recursion
  polymorphism
  universe_erasure
  prop_set_discipline
  monads
  coinductives
  modules
  source_maps
  strings_bytes
  numbers
  finite_collections
  io_boundaries
  reals_unsupported
  io_run_unsupported))
